--- a/resource/css/reset.css
+++ b/resource/css/reset.css
@@ -1,14 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap');
 @font-face{
-  font-family: 'SimSun-ExtB';
-  src: url(../img/resource/font/simsunb.ttf) format('truetype');
+  font-family:'GmarketSansTTFMedium';
+  src:url('/resource/font/GmarketSansTTFMedium.ttf') format('truetype');
   font-weight: normal;
+  font-style: normal;
+}
+@font-face{
+  font-family:'GmarketSansTTFLight';
+  src:url('/resource/font/GmarketSansTTFLight.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face{
+  font-family:'GmarketSansTTFBold';
+  src:url('/resource/font/GmarketSansTTFBold.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
 /* YUI 3.5.0 reset.css (http://developer.yahoo.com/yui/3/cssreset/) - https://cssdeck.com/blog/ */
 html{color:#333333;background:#FFF}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0}table{border-collapse:collapse;border-spacing:0}fieldset,img{border:0}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal}ol,ul{list-style:none}caption,th{text-align:left}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}q:before,q:after{content:''}abbr,acronym{border:0;font-variant:normal}sup{vertical-align:text-top}sub{vertical-align:text-bottom}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit}input,textarea,select{*font-size:100%}legend{color:#000}#yui3-css-stamp.cssreset{display:none}
 
 *{
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Noto Sans KR', sans-serif;
   font-size: 16px;
   letter-spacing: -1.2px;
   color: #000000;
@@ -47,3 +60,16 @@ i{font-style: normal;}
   --font-bold: 700;
 }
 video{max-width: 100%}
+.luckiest{
+  font-family: 'Luckiest Guy', cursive;
+}
+.underline{
+  display: inline-block;
+  border-bottom: 1px solid;
+}
+.hover-rotate{
+  transition: transform .2s ease-in-out;
+}
+.hover-rotate:hover{
+  transform: rotate(-15deg);
+}
